@@ -14,6 +14,9 @@ TODO
 * reimplement repeating thread as a queued thread?
 * add glib support
 
+20140915
+* changes for project site move
+
 20140730
 * updated dpkg files
 
